--- a/Image Compression using KMeans Clustering.ipynb
+++ b/Image Compression using KMeans Clustering.ipynb
@@ -32,6 +32,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Images to be compressed should be in a Folder named Images"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
